# fractal

./: CMakeLists.txt  README.md  run  simple.frag
src/: main.cpp  main.old
src/common/: shader.cpp
